tests/snapshots/regression/recovery__t16_handle_missing_lbrace_contextual.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/recovery/t16_handle_missing_lbrace_contextual.flx
exit_code: 1

[1 of 8] Compiling  Assert
[2 of 8] Compiling  Array
[3 of 8] Compiling  IO
[4 of 8] Compiling  List
[5 of 8] Compiling  Numeric
[6 of 8] Compiling  Option
[7 of 8] Compiling  String
• 1 error • tests/fixtures/recovery/t16_handle_missing_lbrace_contextual.flx
error[E034]: Unexpected Token

Expected `{` to begin `handle` arms.

  tests/fixtures/recovery/t16_handle_missing_lbrace_contextual.flx:1:21
  |
1 | let x = 1 handle IO print(resume, msg) -> resume(msg)
  |                     ^^^^^

Hint:
  Handle expressions use `expr handle Effect { ... }`.

Note:
  while parsing `handle` expression
  Suppressed 1 cascading parser diagnostic(s) likely caused by an earlier syntax error.
